# Hound

./: Cargo.toml  README.md
src/: infrastructure.rs  main.rs
src/application/: mod.rs
src/domain/errors/: cli_error.rs  mod.rs
src/domain/structs/: mod.rs  search_engine.rs
src/infrastructure/: duckdb_connector.rs  mod.rs
src/infrastructure/cli/: args.rs  mod.rs
src/infrastructure/database/: duckdb_pool.rs  duckdb_setup.rs  mod.rs  schema.sql  st_duckdb_config.rs  struct_duckdb_config.rs
src/infrastructure/httpclient/: defaultheaders.rs  httpclient.rs  mod.rs  struct_http_client.rs
src/services/: httpclient.rs
