[package]
name = "Hound"
version = "0.1.0"
edition = "2024"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
