[package]
name = "Hound"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = {version ="4.6.1", features = ["derive"]}
duckdb = { version = "1.1.1", features = ["bundled","r2d2"] }
r2d2 = "0.8.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
